<resources>
    <string name="app_name">Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_section1">Friends</string>
    <string name="title_section2">Inbox</string>
    <string name="empty_messages_text">No Messages</string>
    <string name="empty_friends_text">No Friends</string>
    <string name="username_text_hint">username</string>
    <string name="password_text_hint">password</string>
    <string name="email_text_hint">email</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="signup_text_label">Don\'t have an account ? Sign Up!</string>
    <string name="signup_error_message">Please make sure you entered a username,password and email address</string>
    <string name="signup_error_title">Ooops!</string>
    <string name="login_error_message">Please make sure you entered a username and password</string>
    <string name="login_error_title">Ooops!</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="action_logout">Log Out</string>
    <string name="action_get_help">Get Help</string>
    <string name="action_edit_friends">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re Sorry</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose Some Friends First</string>
    <string name="error_sending_message">There was an error sending your message</string>
    <string name="subtitle">Find your child project</string>
    <string name="content_desc">background for app</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="button_divider">Button Divider</string>
    <string name="no_users_text">No Users</string>
    <string name="push_message">"You have a new Message from %s"</string>
</resources>
