<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="app.sunshine.sakr.com.findyourchild.ui.LoginActivity"
                style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>


    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubTitle"/>


    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/userNameField"
            style="@style/AuthEditText">
            <requestFocus/>
        </EditText>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordField"
            android:hint="@string/password_text_hint"
            style="@style/AuthEditText"/>

    </LinearLayout>


    <Button
        android:text="@string/login_button_label"
        android:id="@+id/loginButton"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text_label"
        android:id="@+id/signupText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>


</RelativeLayout>
